opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/accessor"
bug-reports: "https://github.com/janestreet/accessor/issues"
dev-repo: "git+https://github.com/janestreet/accessor.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/accessor/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"         {>= "5.1.0"}
  "base"          {= "v0.18~preview.130.76+222"}
  "higher_kinded" {= "v0.18~preview.130.76+222"}
  "ppx_jane"      {= "v0.18~preview.130.76+222"}
  "dune"          {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "A library that makes it nicer to work with nested functional data structures"
description: """
An accessor is a value that understands how to reach data within a larger data structure,
independently from what you intend to do with it. Accessors allow you to read and write
data and perform possibly-monadic traversals. By composing accessors, you can work with
increasingly complex data structures.

In case you have ever heard of "lenses", this is an OCaml implementation of that idea.
"""
url {
  src:
    "https://github.com/janestreet/accessor/archive/76646c16ce8b1de06d6169666294e0fc8c69178d.tar.gz"
  checksum:
    "sha256=ae1b5c45dcef98a4081e9a3f23f7e5ddf85ec572c8b6c55be2bed7db71b399d4"
}
