opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_durable"
bug-reports: "https://github.com/janestreet/async_durable/issues"
dev-repo: "git+https://github.com/janestreet/async_durable.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_durable/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "5.1.0"}
  "async_kernel"     {= "v0.18~preview.130.76+222"}
  "async_rpc_kernel" {= "v0.18~preview.130.76+222"}
  "core"             {= "v0.18~preview.130.76+222"}
  "core_kernel"      {= "v0.18~preview.130.76+222"}
  "ppx_jane"         {= "v0.18~preview.130.76+222"}
  "dune"             {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Durable connections for use with async"
description: """
Async_durable helps recover from errors when connections can be easily be recreated.
"""
url {
  src:
    "https://github.com/janestreet/async_durable/archive/53a9e2819b96f20dada2e4a8688af027e4d959b9.tar.gz"
  checksum:
    "sha256=6138b3a62156b1437152d9cadcc486337c6e9fd9eea5fbc7e8e416f3b1900631"
}
