opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_extra"
bug-reports: "https://github.com/janestreet/async_extra/issues"
dev-repo: "git+https://github.com/janestreet/async_extra.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_extra/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"        {>= "5.1.0"}
  "async_kernel" {= "v0.18~preview.130.76+222"}
  "core"         {= "v0.18~preview.130.76+222"}
  "core_kernel"  {= "v0.18~preview.130.76+222"}
  "ppx_jane"     {= "v0.18~preview.130.76+222"}
  "dune"         {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Monadic concurrency library"
description: """
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"""
url {
  src:
    "https://github.com/janestreet/async_extra/archive/76bce581acd619ea05163e96ad0a0e4120a00ad2.tar.gz"
  checksum:
    "sha256=3aaa0f68a0b0fcdc2c0d90d4300c3d9efbe1683e87a13d08a3124b44a970e274"
}
