opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_find"
bug-reports: "https://github.com/janestreet/async_find/issues"
dev-repo: "git+https://github.com/janestreet/async_find.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_find/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "async"    {= "v0.18~preview.130.76+222"}
  "core"     {= "v0.18~preview.130.76+222"}
  "ppx_jane" {= "v0.18~preview.130.76+222"}
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Directory traversal with Async"
description: """
"""
url {
  src:
    "https://github.com/janestreet/async_find/archive/075140ae02d9a85dddaff71e9a7726d1aa77195b.tar.gz"
  checksum:
    "sha256=baedd440402bc0a89544038c1ebb5bb4867e6d3895a0d9eb5654b384e2586246"
}
