opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_inotify"
bug-reports: "https://github.com/janestreet/async_inotify/issues"
dev-repo: "git+https://github.com/janestreet/async_inotify.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_inotify/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"      {>= "5.1.0"}
  "async"      {= "v0.18~preview.130.76+222"}
  "async_find" {= "v0.18~preview.130.76+222"}
  "core"       {= "v0.18~preview.130.76+222"}
  "core_unix"  {= "v0.18~preview.130.76+222"}
  "ppx_jane"   {= "v0.18~preview.130.76+222"}
  "dune"       {>= "3.17.0"}
  "inotify"    {>= "2.4.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Async wrapper for inotify"
description: """
"""
url {
  src:
    "https://github.com/janestreet/async_inotify/archive/15f1a21996030d754ea8ec50b01244bded19958c.tar.gz"
  checksum:
    "sha256=f3edd85f514e6298112c078d31bea7a2d9c37e2ef938274acb07a0f5c52db0e2"
}
