opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_js"
bug-reports: "https://github.com/janestreet/async_js/issues"
dev-repo: "git+https://github.com/janestreet/async_js.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_js/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "5.1.0"}
  "async_kernel"     {= "v0.18~preview.130.76+222"}
  "async_rpc_kernel" {= "v0.18~preview.130.76+222"}
  "core"             {= "v0.18~preview.130.76+222"}
  "ppx_expect"       {= "v0.18~preview.130.76+222"}
  "ppx_jane"         {= "v0.18~preview.130.76+222"}
  "dune"             {>= "3.17.0"}
  "js_of_ocaml"      {= "6.0.1+ox"}
  "js_of_ocaml-ppx"  {= "6.0.1+ox"}
  "uri"              {>= "3.0.0"}
  "uri-sexp"         {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "A small library that provide Async support for JavaScript platforms"
description: """
"""
url {
  src:
    "https://github.com/janestreet/async_js/archive/ce67283c20eeaaf9998c0cd81bbe75f1feac3b40.tar.gz"
  checksum:
    "sha256=28b2ffadcafc75112bb9565bf3ac208228eea45d8757ab5ea1300b73c83e7aef"
}
