opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_kernel"
bug-reports: "https://github.com/janestreet/async_kernel/issues"
dev-repo: "git+https://github.com/janestreet/async_kernel.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_kernel/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "5.1.0"}
  "core"        {= "v0.18~preview.130.76+222"}
  "core_kernel" {= "v0.18~preview.130.76+222"}
  "core_unix"   {= "v0.18~preview.130.76+222"}
  "parsexp"     {= "v0.18~preview.130.76+222"}
  "ppx_jane"    {= "v0.18~preview.130.76+222"}
  "sexplib"     {= "v0.18~preview.130.76+222"}
  "unique"      {= "v0.18~preview.130.76+222"}
  "dune"        {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Monadic concurrency library"
description: """
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"""
url {
  src:
    "https://github.com/janestreet/async_kernel/archive/cfc42ef76ccef008cca3b198e4d2c10c02281e24.tar.gz"
  checksum:
    "sha256=deff0d21083f4433f19e32dcc7c3e79c8d57df52b1e57b3a697e6064eb60435e"
}
