opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_rpc_kernel"
bug-reports: "https://github.com/janestreet/async_rpc_kernel/issues"
dev-repo: "git+https://github.com/janestreet/async_rpc_kernel.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_rpc_kernel/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                   {>= "5.1.0"}
  "async_kernel"            {= "v0.18~preview.130.76+222"}
  "base"                    {= "v0.18~preview.130.76+222"}
  "bin_prot"                {= "v0.18~preview.130.76+222"}
  "core"                    {= "v0.18~preview.130.76+222"}
  "core_extended"           {= "v0.18~preview.130.76+222"}
  "core_kernel"             {= "v0.18~preview.130.76+222"}
  "flexible_sexp"           {= "v0.18~preview.130.76+222"}
  "pipe_with_writer_error"  {= "v0.18~preview.130.76+222"}
  "ppx_jane"                {= "v0.18~preview.130.76+222"}
  "protocol_version_header" {= "v0.18~preview.130.76+222"}
  "sexplib"                 {= "v0.18~preview.130.76+222"}
  "dune"                    {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Platform-independent core of Async RPC library"
description: """
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"""
url {
  src:
    "https://github.com/janestreet/async_rpc_kernel/archive/16bf063353a5a8dcc594936425b9cda14200bf28.tar.gz"
  checksum:
    "sha256=e25b4da90e5484cf228eacaffc9fb8e207004f474057b50ba3f7a36808df45eb"
}
