opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_smtp"
bug-reports: "https://github.com/janestreet/async_smtp/issues"
dev-repo: "git+https://github.com/janestreet/async_smtp.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_smtp/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"          {>= "5.1.0"}
  "async"          {= "v0.18~preview.130.76+222"}
  "async_extra"    {= "v0.18~preview.130.76+222"}
  "async_inotify"  {= "v0.18~preview.130.76+222"}
  "async_log"      {= "v0.18~preview.130.76+222"}
  "async_sendfile" {= "v0.18~preview.130.76+222"}
  "async_shell"    {= "v0.18~preview.130.76+222"}
  "async_ssl"      {= "v0.18~preview.130.76+222"}
  "babel"          {= "v0.18~preview.130.76+222"}
  "bin_prot"       {= "v0.18~preview.130.76+222"}
  "core"           {= "v0.18~preview.130.76+222"}
  "core_kernel"    {= "v0.18~preview.130.76+222"}
  "core_unix"      {= "v0.18~preview.130.76+222"}
  "email_message"  {= "v0.18~preview.130.76+222"}
  "ppx_jane"       {= "v0.18~preview.130.76+222"}
  "ppx_stable"     {= "v0.18~preview.130.76+222"}
  "re2"            {= "v0.18~preview.130.76+222"}
  "resource_cache" {= "v0.18~preview.130.76+222"}
  "sexp_macro"     {= "v0.18~preview.130.76+222"}
  "textutils"      {= "v0.18~preview.130.76+222"}
  "angstrom"       {>= "0.15.0"}
  "base64"         {>= "3.4.0"}
  "cryptokit"      {>= "1.16" & < "1.17"}
  "dune"           {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "SMTP client and server"
description: """
"""
url {
  src:
    "https://github.com/janestreet/async_smtp/archive/e41e8da3afedbc7b3a0e94c308d650c9a0984a2e.tar.gz"
  checksum:
    "sha256=b15187f3ec077acb5aec048edb7a11d70c04b90e7bdb9ca5238b811a8f57e4e0"
}
