opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_ssl"
bug-reports: "https://github.com/janestreet/async_ssl/issues"
dev-repo: "git+https://github.com/janestreet/async_ssl.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_ssl/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"             {>= "5.1.0"}
  "async"             {= "v0.18~preview.130.76+222"}
  "base"              {= "v0.18~preview.130.76+222"}
  "core"              {= "v0.18~preview.130.76+222"}
  "ppx_jane"          {= "v0.18~preview.130.76+222"}
  "ppx_optcomp"       {= "v0.18~preview.130.76+222"}
  "stdio"             {= "v0.18~preview.130.76+222"}
  "conf-libssl"
  "ctypes"            {= "0.23.0+ox"}
  "ctypes-foreign"    {= "0.23.0+ox"}
  "dune"              {>= "3.17.0"}
  "dune-configurator"
  "integers"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "An Async-pipe-based interface with OpenSSL"
description: """
This library allows you to create an SSL client and server, with
encrypted communication between both.
"""
url {
  src:
    "https://github.com/janestreet/async_ssl/archive/7abae68f7a0c3dcc88dcbc7390e84491707d5907.tar.gz"
  checksum:
    "sha256=6345594b5736f66843b0aea980ded08ffabe568b39b136a2fc05629de60c2154"
}
