opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_udp"
bug-reports: "https://github.com/janestreet/async_udp/issues"
dev-repo: "git+https://github.com/janestreet/async_udp.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_udp/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "5.1.0"}
  "async"       {= "v0.18~preview.130.76+222"}
  "core"        {= "v0.18~preview.130.76+222"}
  "core_kernel" {= "v0.18~preview.130.76+222"}
  "core_unix"   {= "v0.18~preview.130.76+222"}
  "ppx_jane"    {= "v0.18~preview.130.76+222"}
  "dune"        {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Monadic concurrency library"
description: """
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"""
url {
  src:
    "https://github.com/janestreet/async_udp/archive/40c5ad5cc8074ae4cad6bff17bddb30079b124b9.tar.gz"
  checksum:
    "sha256=0fe25d3dda327a6e05d34b5e297d37ff7837af9301492d99841afe7ca5dc9910"
}
