opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_unix"
bug-reports: "https://github.com/janestreet/async_unix/issues"
dev-repo: "git+https://github.com/janestreet/async_unix.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_unix/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"        {>= "5.1.0"}
  "async_kernel" {= "v0.18~preview.130.76+222"}
  "core"         {= "v0.18~preview.130.76+222"}
  "core_kernel"  {= "v0.18~preview.130.76+222"}
  "core_unix"    {= "v0.18~preview.130.76+222"}
  "ppx_jane"     {= "v0.18~preview.130.76+222"}
  "ppx_optcomp"  {= "v0.18~preview.130.76+222"}
  "sexplib"      {= "v0.18~preview.130.76+222"}
  "cstruct"      {>= "6.0.0"}
  "dune"         {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Monadic concurrency library"
description: """
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"""
url {
  src:
    "https://github.com/janestreet/async_unix/archive/946357f1578d0e58952473f8b7d6f0dab1f1c388.tar.gz"
  checksum:
    "sha256=f677cabcb4fb7cd251d11e863c35f5a07e28a163b7440376352a7e15b02bc30a"
}
