opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/await"
bug-reports: "https://github.com/janestreet/await/issues"
dev-repo: "git+https://github.com/janestreet/await.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/await/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "5.2.0"}
  "async"            {= "v0.18~preview.130.76+222"}
  "base"             {= "v0.18~preview.130.76+222"}
  "basement"         {= "v0.18~preview.130.76+222"}
  "capsule"          {= "v0.18~preview.130.76+222"}
  "core"             {= "v0.18~preview.130.76+222"}
  "oxcaml_effect"    {= "v0.18~preview.130.76+222"}
  "portable"         {= "v0.18~preview.130.76+222"}
  "ppx_debug_assert" {= "v0.18~preview.130.76+222"}
  "ppx_fuelproof"    {= "v0.18~preview.130.76+222"}
  "ppx_jane"         {= "v0.18~preview.130.76+222"}
  "ppx_sexp_conv"    {= "v0.18~preview.130.76+222"}
  "ppx_sexp_value"   {= "v0.18~preview.130.76+222"}
  "ppx_shorthand"    {= "v0.18~preview.130.76+222"}
  "ppx_template"     {= "v0.18~preview.130.76+222"}
  "dune"             {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "Implementations of awaiting and synchronization primitives for OxCaml"
description: """
[Await] provides implementations of awaiting and synchronization primitives for OxCaml.
"""
url {
  src:
    "https://github.com/janestreet/await/archive/643795c78958ae8ce499124e7661de0bbe7619ae.tar.gz"
  checksum:
    "sha256=264110832bbe7e35327db7f1c91f951f36139b533517e5101fd7fbfa7696a4f1"
}
