opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/babel"
bug-reports: "https://github.com/janestreet/babel/issues"
dev-repo: "git+https://github.com/janestreet/babel.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/babel/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                  {>= "5.1.0"}
  "async_kernel"           {= "v0.18~preview.130.76+222"}
  "async_rpc_kernel"       {= "v0.18~preview.130.76+222"}
  "core"                   {= "v0.18~preview.130.76+222"}
  "pipe_with_writer_error" {= "v0.18~preview.130.76+222"}
  "ppx_jane"               {= "v0.18~preview.130.76+222"}
  "streamable"             {= "v0.18~preview.130.76+222"}
  "tilde_f"                {= "v0.18~preview.130.76+222"}
  "dune"                   {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "A library for defining Rpcs that can evolve over time without breaking backward compatibility."
description: """
A library for defining Rpcs that can evolve over time without breaking backward compatibility.
"""
url {
  src:
    "https://github.com/janestreet/babel/archive/f73e3846e22b6665192b3552d0186fba3b9a9596.tar.gz"
  checksum:
    "sha256=7692683c6319fad25e9a484501444d0a0a1f537dbc6c3b271f2be3185581a960"
}
