opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/base"
bug-reports: "https://github.com/janestreet/base/issues"
dev-repo: "git+https://github.com/janestreet/base.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/base/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                   {>= "5.1.0"}
  "basement"                {= "v0.18~preview.130.76+222"}
  "capsule0"                {= "v0.18~preview.130.76+222"}
  "ocaml_intrinsics_kernel" {= "v0.18~preview.130.76+222"}
  "ppx_array_base"          {= "v0.18~preview.130.76+222"}
  "ppx_base"                {= "v0.18~preview.130.76+222"}
  "ppx_cold"                {= "v0.18~preview.130.76+222"}
  "ppx_hash"                {= "v0.18~preview.130.76+222"}
  "ppxlib_jane"             {= "v0.18~preview.130.76+222"}
  "sexplib0"                {= "v0.18~preview.130.76+222"}
  "dune"                    {>= "3.17.0"}
  "dune-configurator"
  "ppxlib"                  {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Full standard library replacement for OCaml"
description: """
Full standard library replacement for OCaml

Base is a complete and portable alternative to the OCaml standard
library. It provides all standard functionalities one would expect
from a language standard library. It uses consistent conventions
across all of its module.

Base aims to be usable in any context. As a result system dependent
features such as I/O are not offered by Base. They are instead
provided by companion libraries such as stdio:

  https://github.com/janestreet/stdio
"""
url {
  src:
    "https://github.com/janestreet/base/archive/52a6c24f130161941b4454c278ecb90e1d293c4e.tar.gz"
  checksum:
    "sha256=ac84a76676bed1f83478ad96ed79485780e4dc789e09999461c6dd4ea13a1478"
}
