opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/base_bigstring"
bug-reports: "https://github.com/janestreet/base_bigstring/issues"
dev-repo: "git+https://github.com/janestreet/base_bigstring.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/base_bigstring/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "5.1.0"}
  "base"     {= "v0.18~preview.130.76+222"}
  "int_repr" {= "v0.18~preview.130.76+222"}
  "ppx_jane" {= "v0.18~preview.130.76+222"}
  "sexplib"  {= "v0.18~preview.130.76+222"}
  "dune"     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "String type based on [Bigarray], for use in I/O and C-bindings"
description: """
String type based on [Bigarray], for use in I/O and C-bindings.
"""
url {
  src:
    "https://github.com/janestreet/base_bigstring/archive/80b25407f646ffc9a46a8477d09abeff63ba4859.tar.gz"
  checksum:
    "sha256=5a0afe964f79177424b3ce531a11788ef79c1d5e4c920f7d4f9e963537ad456b"
}
