opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/base_quickcheck"
bug-reports: "https://github.com/janestreet/base_quickcheck/issues"
dev-repo: "git+https://github.com/janestreet/base_quickcheck.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/base_quickcheck/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"               {>= "5.1.0"}
  "base"                {= "v0.18~preview.130.76+222"}
  "ppx_base"            {= "v0.18~preview.130.76+222"}
  "ppx_fields_conv"     {= "v0.18~preview.130.76+222"}
  "ppx_let"             {= "v0.18~preview.130.76+222"}
  "ppx_portable"        {= "v0.18~preview.130.76+222"}
  "ppx_sexp_message"    {= "v0.18~preview.130.76+222"}
  "ppx_sexp_value"      {= "v0.18~preview.130.76+222"}
  "ppx_shorthand"       {= "v0.18~preview.130.76+222"}
  "ppx_template"        {= "v0.18~preview.130.76+222"}
  "ppxlib_jane"         {= "v0.18~preview.130.76+222"}
  "splittable_random"   {= "v0.18~preview.130.76+222"}
  "dune"                {>= "3.17.0"}
  "ocaml-compiler-libs" {= "v0.17.0+ox"}
  "ppxlib"              {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis:
  "Randomized testing framework, designed for compatibility with Base"
description: """
Base_quickcheck provides randomized testing in the style of Haskell's Quickcheck library,
with support for built-in types as well as types provided by Base.
"""
url {
  src:
    "https://github.com/janestreet/base_quickcheck/archive/901bb608ea050af3c74cc65a65a08ae96dd24cae.tar.gz"
  checksum:
    "sha256=49aae025e9de9200f69b7bfb1f0e30d555eecf72d95b79ec47a1729ca3e2673d"
}
