opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/base_trie"
bug-reports: "https://github.com/janestreet/base_trie/issues"
dev-repo: "git+https://github.com/janestreet/base_trie.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/base_trie/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                    {>= "5.1.0"}
  "base"                     {= "v0.18~preview.130.76+222"}
  "bin_prot"                 {= "v0.18~preview.130.76+222"}
  "core"                     {= "v0.18~preview.130.76+222"}
  "expect_test_helpers_core" {= "v0.18~preview.130.76+222"}
  "ppx_jane"                 {= "v0.18~preview.130.76+222"}
  "ppx_stable_witness"       {= "v0.18~preview.130.76+222"}
  "dune"                     {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Trie data structure library"
description: """
This library provides an implementation of a trie data structure.

Lookup is based on "chains" of keys; each node of the trie has children representing
each potential next key in the chain.
"""
url {
  src:
    "https://github.com/janestreet/base_trie/archive/9d7a0f98dbcf2947d70128fb2fba8a53a74a530d.tar.gz"
  checksum:
    "sha256=6ab894a505487389c79e224976fd54c1c9918f7ddcb6df4faf96cf267d92fa9d"
}
