opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/basement"
bug-reports: "https://github.com/janestreet/basement/issues"
dev-repo: "git+https://github.com/janestreet/basement.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/basement/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "dune"  {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Modules defined upstream of and reexported in Base"
description: """
Part of Jane Street's Core library
Basement is a library containing a number of modules that belong to Base, but need to be
defined upstream of Base to break circular dependencies with other libraries, such as
sexplib0
"""
url {
  src:
    "https://github.com/janestreet/basement/archive/c657898128a97dcdfbe4b25d79fd0de2e1e5218f.tar.gz"
  checksum:
    "sha256=f90975f9c5d918a633fd02c3231b8f84a2cac68b35ad7c0f71d5ded03b58bd19"
}
