opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bin_prot"
bug-reports: "https://github.com/janestreet/bin_prot/issues"
dev-repo: "git+https://github.com/janestreet/bin_prot.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bin_prot/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"              {>= "5.1.0"}
  "base"               {= "v0.18~preview.130.76+222"}
  "ppx_compare"        {= "v0.18~preview.130.76+222"}
  "ppx_custom_printf"  {= "v0.18~preview.130.76+222"}
  "ppx_fields_conv"    {= "v0.18~preview.130.76+222"}
  "ppx_globalize"      {= "v0.18~preview.130.76+222"}
  "ppx_optcomp"        {= "v0.18~preview.130.76+222"}
  "ppx_sexp_conv"      {= "v0.18~preview.130.76+222"}
  "ppx_stable_witness" {= "v0.18~preview.130.76+222"}
  "ppx_template"       {= "v0.18~preview.130.76+222"}
  "ppx_variants_conv"  {= "v0.18~preview.130.76+222"}
  "dune"               {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A binary protocol generator"
description: """
Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"""
url {
  src:
    "https://github.com/janestreet/bin_prot/archive/0b8bd0d58e2e703feb44acf9e62966dce5095bc5.tar.gz"
  checksum:
    "sha256=98df9d5540d7e0a26e8e4e125cf01de86b162aa5c8a43c53349b8a3acc0f8d8a"
}
