opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bitset"
bug-reports: "https://github.com/janestreet/bitset/issues"
dev-repo: "git+https://github.com/janestreet/bitset.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/bitset/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"                   {>= "5.1.0"}
  "core"                    {= "v0.18~preview.130.76+222"}
  "ocaml_intrinsics_kernel" {= "v0.18~preview.130.76+222"}
  "ppx_jane"                {= "v0.18~preview.130.76+222"}
  "unboxed"                 {= "v0.18~preview.130.76+222"}
  "dune"                    {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for flat bitsets"
description: """
 An efficient mutable bitset.
"""
url {
  src:
    "https://github.com/janestreet/bitset/archive/dda5bb68674e3bec10d83aed7c57aedfee6d53f5.tar.gz"
  checksum:
    "sha256=2b632ef0c09355e90827540e82c5ad4f9be708c9d6616a0ddb6c009cf6a6478a"
}
