opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bonsai_bench"
bug-reports: "https://github.com/janestreet/bonsai_bench/issues"
dev-repo: "git+https://github.com/janestreet/bonsai_bench.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/bonsai_bench/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "5.1.0"}
  "bonsai"           {= "v0.18~preview.130.76+222"}
  "bonsai_concrete"  {= "v0.18~preview.130.76+222"}
  "command_nodejs"   {= "v0.18~preview.130.76+222"}
  "core"             {= "v0.18~preview.130.76+222"}
  "core_bench"       {= "v0.18~preview.130.76+222"}
  "expectable"       {= "v0.18~preview.130.76+222"}
  "incr_dom"         {= "v0.18~preview.130.76+222"}
  "ocaml-embed-file" {= "v0.18~preview.130.76+222"}
  "ppx_jane"         {= "v0.18~preview.130.76+222"}
  "ppx_pattern_bind" {= "v0.18~preview.130.76+222"}
  "textutils"        {= "v0.18~preview.130.76+222"}
  "dune"             {>= "3.17.0"}
  "js_of_ocaml-ppx"  {= "6.0.1+ox"}
  "uri"              {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for benchmarking bonsai web applications"
description: """
Bonsai is a library for building reusable UI components inside an
     Incremental-style UI framework such as Incr_dom or React. This repository
     provides benchmarking capabilities.
"""
url {
  src:
    "https://github.com/janestreet/bonsai_bench/archive/f3b057f5046fc8fa3033d6e0b2b0d5352d3b0bd9.tar.gz"
  checksum:
    "sha256=669b6ba441ba3f07c45d0945e8378114534f0583f71a6884187e14f90a5b85bc"
}
