opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/bonsai_term"
bug-reports: "https://github.com/janestreet/bonsai_term/issues"
dev-repo: "git+https://github.com/janestreet/bonsai_term.git"
doc:
  "https://ocaml.janestreet.com/ocaml-core/latest/doc/bonsai_term/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"           {>= "5.1.0"}
  "async"           {= "v0.18~preview.130.76+222"}
  "bonsai"          {= "v0.18~preview.130.76+222"}
  "core"            {= "v0.18~preview.130.76+222"}
  "core_unix"       {= "v0.18~preview.130.76+222"}
  "notty_async"     {= "v0.18~preview.130.76+222"}
  "parallel"        {= "v0.18~preview.130.76+222"}
  "ppx_jane"        {= "v0.18~preview.130.76+222"}
  "uopt"            {= "v0.18~preview.130.76+222"}
  "virtual_dom"     {= "v0.18~preview.130.76+222"}
  "dune"            {>= "3.17.0"}
  "notty-community" {= "0.2.4+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A library for building dynamic terminal apps, using bonsai"
description: """
Bonsai_term is a library for building reusable TUI componetns and apps inside an
    Incremental-style UI framework such as Bonsai_web, Incr_dom or React.
"""
url {
  src:
    "https://github.com/janestreet/bonsai_term/archive/210841d1bd2badc73c370c58f0617a40e8fdcdaa.tar.gz"
  checksum:
    "sha256=d1f8366e12a4c5d757f56f417be8ccd3e4b73944e8d7a5bceb5c48809e078354"
}
